# ScyPro_coursework_4

./: README.md  config.json  jsonsaver.py  main.py  new_file.json  parser_api.py  pyproject.toml  search_result.json  utils.py  vacancies_handler.py
config_files/: HHru_config.json  SJru_config.json
parser_utils/: jsonsaver.py  parser_api.py  utils.py  vacancies_handler.py
